Link to template for all placeholders

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -376,7 +376,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('The Forgotten Sky')">The Forgotten Sky</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('The Forgotten Sky')">The Forgotten Sky</a>
                         </h3>
                         <span class="achievement-percentage">96.2%</span>
                     </div>
@@ -393,7 +393,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('On the Road to Mastery')">On the Road to
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('On the Road to Mastery')">On the Road to
                                 Mastery</a>
                         </h3>
                         <span class="achievement-percentage">85.9%</span>
@@ -430,7 +430,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -447,7 +447,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -464,7 +464,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -481,7 +481,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -498,7 +498,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -515,7 +515,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -532,7 +532,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -549,7 +549,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -566,7 +566,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -583,7 +583,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -600,7 +600,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -617,7 +617,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -634,7 +634,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -651,7 +651,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -668,7 +668,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -685,7 +685,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -702,7 +702,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
