Remove alert for placeholders

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -376,7 +376,8 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('The Forgotten Sky')">The Forgotten Sky</a>
+                            <a href="achievements/template.html"
+                                onclick="toggleAchievementDetails('The Forgotten Sky')">The Forgotten Sky</a>
                         </h3>
                         <span class="achievement-percentage">96.2%</span>
                     </div>
@@ -393,7 +394,8 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('On the Road to Mastery')">On the Road to
+                            <a href="achievements/template.html"
+                                onclick="toggleAchievementDetails('On the Road to Mastery')">On the Road to
                                 Mastery</a>
                         </h3>
                         <span class="achievement-percentage">85.9%</span>
@@ -430,7 +432,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -447,7 +449,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -464,7 +466,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -481,7 +483,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -498,7 +500,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -515,7 +517,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -532,7 +534,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -549,7 +551,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -566,7 +568,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -583,7 +585,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -600,7 +602,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -617,7 +619,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -634,7 +636,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -651,7 +653,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -668,7 +670,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -685,7 +687,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
@@ -702,7 +704,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/template.html">Chapter 1</a>
                         </h3>
                         <span class="achievement-percentage">x.x%</span>
                     </div>
