--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -376,8 +376,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html"
-                                onclick="toggleAchievementDetails('The Forgotten Sky')">The Forgotten Sky</a>
+                            <a href="achievements/template.html">The Forgotten Sky</a>
                         </h3>
                         <span class="achievement-percentage">96.2%</span>
                     </div>
@@ -394,8 +393,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html"
-                                onclick="toggleAchievementDetails('On the Road to Mastery')">On the Road to
+                            <a href="achievements/template.html">On the Road to
                                 Mastery</a>
                         </h3>
                         <span class="achievement-percentage">85.9%</span>
