--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -426,15 +426,15 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="Chapter 1">
+            <div class="achievement-card" data-name="In Perfect Sync">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Chapter 1</a>
+                            <a href="achievements/template.html">In Perfect Sync</a>
                         </h3>
-                        <span class="achievement-percentage">x.x%</span>
+                        <span class="achievement-percentage">84.6%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
+                    <p class="achievement-subtitle">Enter link time in battle (excluding Training)</p>
                 </div>
                 <label class="toggle-container">
                     <input type="checkbox" id="chapter1-toggle" data-achievement="chapter1"
