--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -460,15 +460,15 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="Chapter 1">
+            <div class="achievement-card" data-name="It's Called Skill">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Chapter 1</a>
+                            <a href="achievements/template.html">It's Called Skill</a>
                         </h3>
-                        <span class="achievement-percentage">x.x%</span>
+                        <span class="achievement-percentage">83.0%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
+                    <p class="achievement-subtitle">Use skills 50 times in battles</p>
                 </div>
                 <label class="toggle-container">
                     <input type="checkbox" id="chapter1-toggle" data-achievement="chapter1"
