--- a/gbfr/achievements/reminiscence/index.html
+++ b/gbfr/achievements/reminiscence/index.html
@@ -287,7 +287,7 @@
 
 <body>
     <div class="container">
-        <a href="index.html" class="back-link">← Back to Home</a>
+        <a href="../../index.html" class="back-link">← Back to Home</a>
 
         <header>
             <h1 class="main-title">Lyria's Field Notes</h1>
