Update file paths

--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -240,7 +240,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='04.html'">
+            <div class="navigation-card" onclick="window.location.href='04_capra-demon.html'">
                 <div class="navigation-header">
                     <h3>Capra Demon</h3>
                 </div>
@@ -255,7 +255,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='05.html'">
+            <div class="navigation-card" onclick="window.location.href='05_gaping-dragon.html'">
                 <div class="navigation-header">
                     <h3>Gaping Dragon</h3>
                 </div>
@@ -270,7 +270,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='06.html'">
+            <div class="navigation-card" onclick="window.location.href='06_quelaag.html'">
                 <div class="navigation-header">
                     <h3>Quelaag</h3>
                 </div>
@@ -285,7 +285,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='07.html'">
+            <div class="navigation-card" onclick="window.location.href='07_iron-golem.html'">
                 <div class="navigation-header">
                     <h3>Iron Golem</h3>
                 </div>
@@ -300,7 +300,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='08.html'">
+            <div class="navigation-card" onclick="window.location.href='08_o-and-s.html'">
                 <div class="navigation-header">
                     <h3>Ornstein & Smough</h3>
                 </div>
