--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -374,8 +374,6 @@
 
             <!-- All Achievements -->
 
-            <!-- Broken data names -->
-
             <h2 id="sort-text">All Achievements, sorted by playerbase completion</h2>
 
             <div class="achievement-card" data-name="the-forgotten-sky">
@@ -719,6 +717,92 @@
                 </div>
                 <label class="toggle-container">
                     <input type="checkbox" id="in-search-of-hope-toggle" data-achievement="in-search-of-hope"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="warning-signs">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Warning Signs</a>
+                        </h3>
+                        <span class="achievement-percentage">67.8%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Chapter 7 of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="warning-signs-toggle" data-achievement="warning-signs"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="i-like-it-when-numbers-go-up">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">I Like It When Numbers Go Up</a>
+                        </h3>
+                        <span class="achievement-percentage">66.0%</span>
+                    </div>
+                    <p class="achievement-subtitle">Acquire a total of 100,000 rupies</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="i-like-it-when-numbers-go-up-toggle"
+                        data-achievement="i-like-it-when-numbers-go-up" onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="relink">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Relink</a>
+                        </h3>
+                        <span class="achievement-percentage">65.9%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Chapter 8 of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="relink-toggle" data-achievement="relink"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="buff-buffet">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Buff Buffet</a>
+                        </h3>
+                        <span class="achievement-percentage">65.1%</span>
+                    </div>
+                    <p class="achievement-subtitle">Use buffing skills to grant status effects to allies 20 times in
+                        battle</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="buff-buffet-toggle" data-achievement="buff-buffet"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="opposing-wills">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Opposing Wills</a>
+                        </h3>
+                        <span class="achievement-percentage">63.6%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Chapter 9 of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="opposing-wills-toggle" data-achievement="opposing-wills"
                         onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
