Minor title change

--- a/terraria/index.html
+++ b/terraria/index.html
@@ -321,7 +321,7 @@
     <div class="bg-stack hell"></div>
 
     <header>
-        <h1>Becoming a Terrarian</h1>
+        <h1>Become a Terrarian</h1>
     </header>
 
     <div class="breadcrumbs">
