Add some of the challenger achievements

--- a/terraria/achievements/challenger/matching-attire.html
+++ b/terraria/achievements/challenger/matching-attire.html
@@ -4,30 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terraria Achievements - [achievement]</title>
+    <title>Terraria Achievements - Matching Attire</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>[achievement]</h1>
-        <p class="subtitle">[description]</p>
+        <h1>Matching Attire</h1>
+        <p class="subtitle">Equip armor in all three armor slots: head, chest, and feet.</p>
     </header>
 
     <p class="category-description">
         [more info]
     </p>
 
-    <div class="achievement-card" data-id="collector-1">
-        <h3 class="achievement-name">[achievement]</h3>
+    <div class="achievement-card" data-id="Collector-1">
+        <h3 class="achievement-name">Matching Attire</h3>
         <p class="achievement-description">
-            [description]
+            Equip armor in all three armor slots: head, chest, and feet.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
             <div class="difficulty">
                 Difficulty:
-                <span class="difficulty-meter">★★★★☆</span>
+                <span class="difficulty-meter">★★☆☆☆</span>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
 
     <div class="tips-section">
         <div class="tips-header">
-            <h3 class="tips-title">Collection Tips</h3>
+            <h3 class="tips-title">Collector Tips</h3>
         </div>
         <div class="tip-item">
         </div>
