--- a/terraria/achievements/explorer/ooo-shiny.html
+++ b/terraria/achievements/explorer/ooo-shiny.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terraria Achievements - [achievement]</title>
+    <title>Terraria Achievements - Ooo! Shiny!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>[achievement]</h1>
-        <p class="subtitle">[description]</p>
+        <h1>Ooo! Shiny!</h1>
+        <p class="subtitle">Mine your first nugget of ore with a pickaxe.</p>
     </header>
 
     <p class="category-description">
@@ -19,15 +19,15 @@
     </p>
 
     <div class="achievement-card" data-id="explorer-1">
-        <h3 class="achievement-name">[achievement]</h3>
+        <h3 class="achievement-name">Ooo! Shiny!</h3>
         <p class="achievement-description">
-            [description]
+            Mine your first nugget of ore with a pickaxe.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
             <div class="difficulty">
                 Difficulty:
-                <span class="difficulty-meter">★★★★☆</span>
+                <span class="difficulty-meter">★☆☆☆☆</span>
             </div>
         </div>
     </div>
