--- a/terraria/achievements/slayer/template.html
+++ b/terraria/achievements/slayer/template.html
@@ -24,7 +24,7 @@
             [description]
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
             <div class="difficulty">
                 Difficulty:
                 <span class="difficulty-meter">★★★★☆</span>
