--- a/terraria/achievements/collector/stop-hammer-time.html
+++ b/terraria/achievements/collector/stop-hammer-time.html
@@ -24,7 +24,7 @@
             Obtain your first hammer via crafting or otherwise.
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
             <div class="difficulty">
                 Difficulty:
                 <span class="difficulty-meter">★★☆☆☆</span>
