--- a/terraria/achievements/collector/timber.html
+++ b/terraria/achievements/collector/timber.html
@@ -24,7 +24,8 @@
             Chop down your first tree.
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
+            <span class="notes">Notes: Can also be earned by picking up wood from other sources. May be a reference to woodsmen saying Timber!! after cutting down a tree.</span>
             <div class="difficulty">
                 Difficulty:
                 <span class="difficulty-meter">★☆☆☆☆</span>
