Remove reward element

--- a/terraria/achievements/challenger/benched.html
+++ b/terraria/achievements/challenger/benched.html
@@ -24,7 +24,7 @@
             Craft your first work bench.
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
             <div class="difficulty">
                 Difficulty:
                 <span class="difficulty-meter">★☆☆☆☆</span>
