--- a/terraria/achievements/challenger/matching-attire.html
+++ b/terraria/achievements/challenger/matching-attire.html
@@ -24,7 +24,7 @@
             Equip armor in all three armor slots: head, chest, and feet.
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
             <div class="difficulty">
                 Difficulty:
                 <span class="difficulty-meter">★★☆☆☆</span>
