Remove reward element

--- a/terraria/achievements/explorer/i-am-loot.html
+++ b/terraria/achievements/explorer/i-am-loot.html
@@ -24,7 +24,7 @@
             Discover a golden chest underground and take a peek at its contents.
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
             <div class="difficulty">
                 Difficulty:
                 <span class="difficulty-meter">★★☆☆☆</span>
