--- a/terraria/achievements/explorer/no-hobo.html
+++ b/terraria/achievements/explorer/no-hobo.html
@@ -24,7 +24,7 @@
             Build a house suitable enough for your first town NPC, such as the guide, to move into.
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
             <div class="difficulty">
                 Difficulty:
                 <span class="difficulty-meter">★★☆☆☆</span>
