--- a/terraria/achievements/explorer/you-can-do-it.html
+++ b/terraria/achievements/explorer/you-can-do-it.html
@@ -24,7 +24,7 @@
             Survive your character's first full night.
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
             <div class="difficulty">
                 Difficulty:
                 <span class="difficulty-meter">★★☆☆☆</span>
