Change formatting for achievement headers

--- a/terraria/achievements/explorer/ooo-shiny.html
+++ b/terraria/achievements/explorer/ooo-shiny.html
@@ -19,16 +19,21 @@
     </p>
 
     <div class="achievement-card" data-id="explorer-1">
-        <h3 class="achievement-name">Ooo! Shiny!</h3>
+        <div class="achievement-name">
+            <h3>Ooo! Shiny!</h3>
+            <div class="difficulty">Difficulty: ★★★☆☆</div>
+        </div>
+
         <p class="achievement-description">
             Mine your first nugget of ore with a pickaxe.
         </p>
         <div class="achievement-meta">
-            <span class="reward">Reward: [any rewards]</span>
-            <div class="difficulty">
-                Difficulty:
-                <span class="difficulty-meter">★☆☆☆☆</span>
-            </div>
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
+            <span class="notes">Notes: Placing an ore block and then mining it also grants the achievement. The
+                following ores count for this achievement: Iron, Copper, Gold, Silver, Demonite, Hellstone, Cobalt,
+                Mythril, Adamantite, Tin, Lead, Tungsten, Platinum, Crimtane, Chlorophyte, Palladium, Orichalcum,
+                Titanium. The following ores do not count for the achievement: Meteorite, Obsidian, Luminite. The ore in
+                the photo is Copper Ore, and the pickaxe appears to be Tin or Iron.</span>
         </div>
     </div>
 
